name:               zephir
version:            0.1.0.0
synopsis:           A language aimed to the creation of C-extensions for PHP.
homepage:           https://zephir-lang.com
license:            MIT
license-file:       LICENSE
author:             Serghei Iakovlev
maintainer:         Serghei Iakovlev <serghei@zephir-lang.com>
copyright:          Copyright (c) 2013-2019 Zephir Team
bug-reports:        https://github.com/zephir-lang/zephir/issues
category:           Language, Compiler
build-type:         Simple
stability:          Experimental
cabal-version:      >= 1.10
tested-with:        GHC == 7.10.1, GHC == 8.0.2, GHC == 8.6.3
extra-source-files:
  .travis.yml
  .gitignore
  .gitattributes
  .editorconfig
  cabal.project
  CHANGELOG.md
  CODE_OF_CONDUCT.md
  CONTRIBUTING.md
  HLint.hs
  LICENSE
  README.md
description:
  Zephir is a high level programming language that eases the creation and
  maintainability of extensions for PHP.
  .
  Zephir extensions are exported to C code that can be compiled
  and optimized by major C compilers such as gcc/clang/vc++.
  Functionality is exposed to the PHP language.

executable zephir
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

  -- GHC bundled libs
  build-depends:
    base >= 4.8.0.0 && < 5,
    text

  build-depends:
    turtle               >= 1.2.0 && < 1.6.0,
    optparse-applicative,
    system-filepath,
    configurator,
    aeson,
    bytestring,
    ansi-terminal

  if impl(ghc < 8.0)
    build-depends:
      generic-deriving >= 1.10  && < 2,
      semigroups       >= 0.8.4 && < 1

source-repository head
  type:     git
  location: https://github.com/zephir-lang/zephir.git
